fix(widget-chat): Fix cannot share files on IE11

--- a/packages/widget-chat/src/components/chip-file/styles.css
+++ b/packages/widget-chat/src/components/chip-file/styles.css
@@ -46,7 +46,6 @@
 }
 
 .thumbnail img {
-  position: absolute;
   max-width: 100%;
   max-height: 100%;
 }
