--- a/packages/widget-chat/src/containers/chat-widget/styles.css
+++ b/packages/widget-chat/src/containers/chat-widget/styles.css
@@ -26,11 +26,14 @@
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   flex: 1 1 auto;
+  flex-direction: column;
 }
 
 .message-composer-wrapper {
   min-height: 0;
+  flex: 0 0 auto;
 }
 
 .loading {
@@ -49,6 +52,8 @@
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  flex: 1 1 auto;
   flex-direction: column;
 }
 
